src/main.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 5vmin;
  scrollbar-width: none;
}

::-webkit-scrollbar {
  display: none;
}

body {
  overflow: hidden;
}

.slider {
  height: 100vh;
  scroll-snap-type: x mandatory;
  overflow: auto;
  display: flex;
}

.slide {
  height: 100vh;
  width: 100vw;
  max-height: 100%;
  scroll-snap-align: start;
  flex-shrink: 0;
  padding: 4vh 10vw;
  background: var(--background);
  color: var(--color);
  font-family: var(--fontFamily);
  position: relative;
  isolation: isolate;
}

.slide::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 0;
  right: 0;
  transform: translateY(-50%) skewY(-10deg);
  z-index: -1;
  background: linear-gradient(
    to right,
    transparent 4%,
    var(--color) 4%,
    var(--color) 76%,
    transparent 76%
  );
  mix-blend-mode: color-burn;
  width: 100%;
  height: 50%;
}

.flex-row {
  display: flex;
  align-items: center;
}

.flex-row:nth-last-child(3),
.flex-row:nth-last-child(2) {
  margin-top: 2vmin;
}

.flex-row:last-child {
  margin-top: 6vmin;
}

.flex-row.between {
  justify-content: space-between;
}

h2 {
  margin-top: 10vmin;
  font-size: 10vmin;
}

h2,
h3 {
  margin-bottom: 4vmin;
}

h3 {
  font-size: 6vmin;
}

h4 {
  margin-bottom: 2vmin;
  font-size: 3vmin;
}

small {
  font-size: 2.5vmin;
}

.circle {
  width: 5vmin;
  height: 5vmin;
  border-radius: 50%;
  background: var(--circleBg);
  border: 2px solid var(--color);
  margin-right: 14px;
}

header,
footer {
  position: absolute;
  width: 100vw;
  left: 0;
  right: 0;
  padding: 0 10vw;
}

header {
  top: 1vmin;
}

footer {
  bottom: 3vmin;
}

@media screen and (max-width: 991px) {
  .slide {
    padding: 6vh 7vw;
  }

  header,
  footer {
    padding: 0 7vw;
  }
}

@media screen and (max-width: 576px) {
  .slider {
    scroll-snap-type: y mandatory;
    flex-direction: column;
  }

  .slide {
    padding-top: 20vmin;
  }

  .slide::before {
    top: 34%;
    height: 30%;
  }
}

